welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:2: error: not found: value temps2
  if ((temp1>100 && temps2<0) || (temp1<0 && temp2>100)) {return true}
                    ^